# vivado-mac

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yaml
scripts/: Dockerfile  headers.sh  install.sh  setup.sh  start_container.sh  startup.sh  vivado_settings_202502.txt
src/: assets.rs  cli.rs  deps.rs  docker.rs  log.rs  main.rs  progress.rs  util.rs
