[package]
name = "vivado-mac"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19"
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "6"
futures-util = "0.3"
indicatif = "0.17"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "io-std", "io-util", "time", "process"] }
